# mdbook-auto-gen-summary

./: Cargo.toml
src/: main.rs
src/auto_gen_summary/: mod.rs
