[package]
name = "mdbook-auto-gen-summary"
version = "0.1.10"
authors = ["George"]
edition = "2018"
description = "A preprocessor and cli tool for mdbook to auto generate summary."
license = "MIT"
documentation = "https://crates.io/crates/mdbook-auto-gen-summary"
homepage = "https://crates.io/crates/mdbook-auto-gen-summary"
repository = "https://github.com/knightflower1989/mdbook-auto-gen-summary"
readme = "README.md"
keywords = ["mdbook", "markdown", "summary"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.1.4"
mdbook = "0.4.25"
anyhow = "1.0.69"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.92"
md-5 = "0.10.5"
hex = "0.4.3"
